compiler/tests/success/test_cast_sopn.jazz
export fn foo (reg u128 x y) -> reg u256 {
   reg u256 z;
   z = (256u)#VPAND(x, y);
   return z;
}
