compiler/tests/fail/typing/x86-64/bug_488.jazz
export fn test(reg u256 x) -> reg u256 {
  x = #VPMULH_4u64(x, x);
  return x;
}
